--- a/Class Projects/Gift App/src/components/Gifs/Gifs.css
+++ b/Class Projects/Gift App/src/components/Gifs/Gifs.css
@@ -2,5 +2,5 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     padding: 2rem;
-    gap: 2.4rem;
+    gap: 0.2;
   }
